--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Deploy
         uses: deployphp/action@v1
         with:
-          dep: deploy
+          dep: deploy all
           deployer-binary: "bin/dep"
           private-key: ${{ secrets.PRIVATE_KEY }}
